--- a/package.json
+++ b/package.json
@@ -10,16 +10,19 @@
     "@types/dotenv": "^8.2.0",
     "@types/mocha": "^8.0.0",
     "@types/node": "^14.0.14",
+    "@types/puppeteer": "^3.0.1",
     "@types/yargs": "^15.0.5",
     "chai": "^4.2.0",
     "dotenv": "^8.2.0",
     "mocha": "^8.0.1",
+    "puppeteer": "^5.2.0",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.5",
     "yargs": "^15.4.1"
   },
   "scripts": {
     "help": "tsc && node dist/setup/index.js --help",
-    "test": "mocha -r ts-node/register src/test/**/*.ts"
+    "uitests": "mocha -r ts-node/register src/test/ui_tests/**/*.ts",
+    "unitests": "mocha -r ts-node/register src/test/unit_tests/**/*.ts"
   }
 }
